<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mail.bsecure.Bsecure" >

    <group android:checkableBehavior="all" >
        <item
            android:id="@+id/m_inbox"
            android:icon="@drawable/ic_drawer_unread_24dp"
            android:title="@string/inbox"/>
        <item
            android:id="@+id/m_sent"
            android:icon="@drawable/ic_drawer_sent_24dp"
            android:title="@string/sent"/>
        <item
            android:id="@+id/m_drafts"
            android:icon="@drawable/perm_group_user_dictionary"
            android:title="@string/drafts"/>
        <item
            android:id="@+id/m_trash"
            android:icon="@drawable/ic_drawer_trash_24dp"
            android:title="@string/trash"/>
        <item
            android:id="@+id/m_settings"
            android:icon="@drawable/ic_drawer_settings_24dp"
            android:title="@string/settings"/>
        <item
            android:id="@+id/m_folder"
            android:icon="@drawable/label_icon"
            android:title="@string/flder"/>
        <item
            android:id="@+id/m_logout"
            android:icon="@drawable/ic_close_24dp"
            android:title="@string/logout"/>
    </group>

</menu>