<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:context=".GLO" >



    <item
        android:id="@+id/cm_filter"
        android:icon="@drawable/filter_bar"
        android:showAsAction="always"
        android:title="@string/filters"
        yourapp:showAsAction="always"/>

    <item
        android:id="@+id/cm_attachments"
        android:icon="@drawable/ic_attachment_comp"
        android:showAsAction="always"
        android:title="@string/attch"
        yourapp:showAsAction="always"/>
    
    <item
        android:id="@+id/cm_send"
        android:icon="@drawable/ic_menu_send"
        android:showAsAction="always"
        android:title="@string/send"
        yourapp:showAsAction="always"/>
    

</menu>