<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" >
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/cur_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/curr_pass"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/curr_pass_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/cmts_bg"
            android:cursorVisible="true"
            android:drawablePadding="10dp"
            android:hint="@string/cur_passss"
            android:inputType="textPassword"
            android:maxLength="64"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray" />

        <requestFocus />

        <TextView
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/new_pass"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/newpass_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/cmts_bg"
            android:cursorVisible="true"
            android:drawablePadding="10dp"
            android:hint="@string/new_passss"
            android:inputType="textPassword"
            android:maxLength="64"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/con_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/con_passs"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/con_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/cmts_bg"
            android:cursorVisible="true"
            android:hint="@string/conform_passss"
            android:inputType="textPassword"
            android:maxLength="64"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/submit_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/template_bt_red_bg"
            android:padding="15dp"
            android:text="@string/submit_pass"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>