<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dip"
    android:paddingBottom="2dp" >

    <TextView
        android:id="@+id/update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/bs_blue"
        android:focusable="false"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/update_version"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_title"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:gravity="center" >

        <TextView
            android:id="@+id/nonetmsg_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/update_details"
            android:textColor="#000000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nonetmsg_update"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/update_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nonetmsg_update"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/template_bt_red_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/later"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/update_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nonetmsg_update"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/template_bt_red_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/ok"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>